--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 markdown: rdiscount
-pygments: true
+highlighter: rouge
 permalink: /blog/:year/:month/:day/:title
 post_defaults:
           layout: default
