--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,7 @@
-highlighter: rouge
-permalink: /blog/:year/:month/:day/:title
-post_defaults:
-          layout: default
+github: [metadata]
+ kramdown:
+   input: GFM
+   hard_wrap: false
+ gems:
+   - jekyll-coffeescript
+   - jekyll-paginate
