--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,39 @@
-name: shuiruge's blog
 markdown: kramdown
 highlighter: rouge
+
+
+# Name of your blog (this will show up at the top of your page and in the RSS feed)
+name: shuiruge's blog
+
+# Short description (goes below the title; it will also be used in the RSS feed)
+# description: your-description
+
+# Your name, as you want it to appear underneath each post and in the footer
+author: shuiruge
+
+# Your email if you want it to be linked on the contact page
+author_email: shuiruge@hotmail.com
+
+# The directory for category index pages. Change it to something else if
+# for example you want links like /categories/category1 instead of /category1
+category_dir: /
+
+# Uncomment if you are planning to run the blog in a subdirectory
+# Note - if you enable this, and attempt to view your site locally you have to use the baseurl in your local path.
+# Example, you must use http://localhost:4000/path/to/blog
+#baseurl: /path/to/blog 
+baseurl: 
+
+# The URL of your actual domain. This will be used to make absolute links in the RSS feed.
+url: http://shuiruge.github.io
+
+#### Under the Hood Stuff #####
+
+# Makes pretty (descriptive) permalinks. See Jekyll docs for alternatives.
+permalink: pretty
+
+# How many articles do you wish to appear on the front page:
+paginate: 3
+
+# Exclude metadata and development time dependencies (like Grunt plugins)
+exclude: [README.markdown, package.json, grunt.js, Gruntfile.js, Gruntfile.coffee, node_modules]
