--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,11 @@ url: http://shuiruge.github.io
 permalink: pretty
 
 # How many articles do you wish to appear on the front page:
-paginate: 3
+paginate: 5
 
 # Exclude metadata and development time dependencies (like Grunt plugins)
 exclude: [README.markdown, package.json, grunt.js, Gruntfile.js, Gruntfile.coffee, node_modules]
+
+
+# Gems
+gems: [jekyll-paginate]
