--- a/_config.yml
+++ b/_config.yml
@@ -16,13 +16,13 @@ author_email: shuiruge@hotmail.com
 
 # The directory for category index pages. Change it to something else if
 # for example you want links like /categories/category1 instead of /category1
-category_dir: /
+#category_dir: /
 
 # Uncomment if you are planning to run the blog in a subdirectory
 # Note - if you enable this, and attempt to view your site locally you have to use the baseurl in your local path.
 # Example, you must use https://localhost:4000/path/to/blog
 #baseurl: /path/to/blog 
-baseurl: 
+#baseurl: 
 
 # The URL of your actual domain. This will be used to make absolute links in the RSS feed.
 url: https://shuiruge.github.io
@@ -36,7 +36,7 @@ permalink: pretty
 paginate: 5
 
 # Exclude metadata and development time dependencies (like Grunt plugins)
-exclude: [README.markdown, package.json, grunt.js, Gruntfile.js, Gruntfile.coffee, node_modules]
+#exclude: [README.markdown, package.json, grunt.js, Gruntfile.js, Gruntfile.coffee, node_modules]
 
 
 # Gems
