--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ name: shuiruge's blog
 author: shuiruge
 
 # Your email if you want it to be linked on the contact page
-author_email: shuiruge@hotmail.com
+author_email: shuiruge@whu.edu.cn
 
 # The directory for category index pages. Change it to something else if
 # for example you want links like /categories/category1 instead of /category1
@@ -37,7 +37,6 @@ paginate: 5
 
 # Exclude metadata and development time dependencies (like Grunt plugins)
 #exclude: [README.markdown, package.json, grunt.js, Gruntfile.js, Gruntfile.coffee, node_modules]
-
 
 # Gems
 gems: [jekyll-paginate]
