--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,12 @@ paginate: 5
 #exclude: [README.markdown, package.json, grunt.js, Gruntfile.js, Gruntfile.coffee, node_modules]
 
 # Gems
-gems: [jekyll-paginate]
+gems:
+  - jekyll-paginate
 
 plugins:
   - jekyll-relative-links
+
+relative_links:
+  enabled:     true
+  collections: true
